review js and add Dobby to winner message

--- a/game.html
+++ b/game.html
@@ -54,6 +54,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-12 game">
                     <button id="play"><i class="far fa-play-circle"></i></button>
+                    <input id="dobby" type="image" src="assets/images/dobby.png" alt="dobby">
                     <div class="row top-row">
                         <div class="col-6">
                             <input id="gryffindor" type="image" src="assets/images/gryffindor-crest.png"
@@ -76,7 +77,9 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="col-lg-4 col-md-12 board">
+                    <img id="message-board" src="assets/images/background-wood.png" alt="message-board">
+                </div>
             </div>
         </div>
     </section>
