--- a/game.html
+++ b/game.html
@@ -46,15 +46,16 @@
     <!-- game section -->
     <section id="game">
         <div class="container-fluid no-gutters house-crest-container">
+            <input id="dobby" type="image" src="assets/images/dobby.png" alt="dobby">
             <div class="row  title">
                 <div class="col-12 text-center">
                     <h1>Follow the House</h1>
                 </div>
+
             </div>
             <div class="row">
                 <div class="col-lg-8 col-md-12 game">
                     <button id="play"><i class="far fa-play-circle"></i></button>
-                    <input id="dobby" type="image" src="assets/images/dobby.png" alt="dobby">
                     <div class="row top-row">
                         <div class="col-6">
                             <input id="gryffindor" type="image" src="assets/images/gryffindor-crest.png"
@@ -78,7 +79,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 board">
-                    <img id="message-board" src="assets/images/background-wood.png" alt="message-board">
+                    <img id="message-board" src="assets/images/paper.png" alt="message-board">
                 </div>
             </div>
         </div>
