--- a/game.html
+++ b/game.html
@@ -85,6 +85,7 @@
         </div>
     </section>
     <!-- SCRIPTS -->
+        <script src="assets/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
