Work on for loop for validation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <script src="assets/js/index.js"></script>
+   <!-- <script src="assets/js/index.js"></script>-->
 </head>
 
 <body>
