--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css//style.css" type="text/css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="assets/js/index.js"></script>
+    <!--<script src="assets/js/index.js"></script>-->
 </head>
 
 <body>
@@ -51,7 +51,6 @@
                 <div class="col-12 text-center">
                     <h1>Follow the House</h1>
                 </div>
-
             </div>
             <div class="row">
                 <div class="col-lg-8 col-md-12 game">
