make loser message fit in middle of window

--- a/game.html
+++ b/game.html
@@ -46,14 +46,16 @@
     <!-- game section -->
     <section id="game">
         <div class="container-fluid no-gutters house-crest-container">
-            <input id="dobby" type="image" src="assets/images/dobby.png" alt="dobby">
+
             <div class="row  title">
-                <div class="col-12 text-center">
+                <div class="col text-center">
                     <h1>Follow the House</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-md-12 game">
+                <div class="col game">
+                    <input id="dobby" type="image" src="assets/images/dobby.png" alt="dobby">
+                    <img id="message-board" src="assets/images/paper.png" alt="message-board">
                     <button id="play"><i class="far fa-play-circle"></i></button>
                     <div class="row top-row">
                         <div class="col-6">
@@ -76,9 +78,6 @@
                                 class="game-btn inline-block ravenclaw" alt="Ravenclaw Crest">
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-12 board">
-                    <img id="message-board" src="assets/images/paper.png" alt="message-board">
                 </div>
             </div>
         </div>
