--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <div class="row">
                 <div class="col-12 mx-auto d-block align-center">
                     <a href="game.html">
-                        <img class="hogwarts-crest" src="assets/images/hogwarts-crest.png" alt="Hogwarts Crest"
-                        href="game.html"></a>
+                        <img class="hogwarts-crest" src="assets/images/hogwarts-crest.png" alt="Hogwarts Crest">
+                    </a>
                 </div>
             </div>
         </div>
