Reduce image sizes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">-->
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- <script src="assets/js/index.js"></script>-->
 </head>
 
@@ -59,7 +59,7 @@
         </div>
     </section>
     <!-- SCRIPTS -->
-    <script src="assets/js/index.js"></script>
+ <!--   <script src="assets/js/index.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
