Made crests light up individually. Unless 2 in a row of same crests

--- a/game.html
+++ b/game.html
@@ -23,20 +23,20 @@
 
     <!-- Help and About pages -->
     <header>
-        <div class="container">
+        <div class="containe-fluid">
             <nav class="navbar navbar-expand-sm navbar-dark">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active mr-2">
                             <a class="nav-link sr-only" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item mr-2">
                             <a class="nav-link" href="help.html">How To Play</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item mr-2">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
                     </ul>
@@ -60,22 +60,22 @@
                     <button id="play"><i class="far fa-play-circle"></i></button>
                     <div class="row top-row">
                         <div class="col-6">
-                            <input id="gryffindor" type="image" src="assets/images/gryffindor-crest.png"
+                            <input id="gryffindor" type="image" src="assets/images/gryffindor_crest.png"
                                 class="game-btn inline-block gryffindor" alt="gryffindor Crest">
                         </div>
                         <div class="col-6">
-                            <input id="slytherin" type="image" src="assets/images/slytherin-crest.png"
+                            <input id="slytherin" type="image" src="assets/images/slytherin_crest.png"
                                 class="game-btn inline-block slytherin" alt="Slytherin Crest">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-6">
-                            <input id="hufflepuff" type="image" src="assets/images/hufflepuff-crest.png"
+                            <input id="hufflepuff" type="image" src="assets/images/hufflepuff_crest.png"
                                 class="game-btn inline-block hufflepuff" alt="Hufflepuff Crest">
                         </div>
                         <div class="col-6">
-                            <input id="ravenclaw" type="image" src="assets/images/ravenclaw-crest.png"
+                            <input id="ravenclaw" type="image" src="assets/images/ravenclaw_crest.png"
                                 class="game-btn inline-block ravenclaw" alt="Ravenclaw Crest">
                         </div>
                     </div>
