Check and modify all UX formating

--- a/about.html
+++ b/about.html
@@ -23,9 +23,8 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-sm navbar-dark">
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
@@ -44,8 +43,8 @@
         </div>
     </header>
     <!-- about section -->
-    <section id="about">
-        <h3 class="title subject">Harry Potter</h3>
+    <section class="about">
+        <h3 class="subject">Harry Potter</h3>
         <p class="synopsis">Harry Potter is a series of seven fantasy novels written by British author, J. K. Rowling.
             The novels chronicle the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron
             Weasley, all of whom are students at Hogwarts School of Witchcraft and Wizardry. The main story arc concerns
@@ -53,7 +52,7 @@
             governing body known as the Ministry of Magic and subjugate all wizards and Muggles (non-magical people).
         </p>
         <p class="source">(source: https://en.wikipedia.org/wiki/Harry_Potter)</p>
-        <h3 class="title subjectJK">J K Rawling</h3>
+        <h3 class="subjectJK">J K Rawling</h3>
         <p class="synopsis">
             Joanne Rowling (born 31 July 1965), better known by her pen name J. K. Rowling, is a British author and
             philanthropist. She is best known for writing the Harry Potter fantasy series, which has won multiple awards
@@ -96,7 +95,7 @@
     </footer>
 
     <!-- SCRIPTS -->
-   <!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -105,7 +104,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-    <script src="assets/js/index.js"></script>-->
+    <script src="assets/js/index.js"></script>
 
 </body>
 
