--- a/help.html
+++ b/help.html
@@ -7,14 +7,10 @@
     <title>Harry Potter Game</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
-    <link rel="stylesheet" href="assets/css//style.css" type="text/css">
-    <!--<link rel="stylesheet" href="assets/js/index.js" type="text/javascript">-->
-    <!--<script src="assets/js/index.js"></script>-->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 
 <body>
@@ -23,9 +19,8 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-sm navbar-dark">
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
@@ -44,20 +39,31 @@
         </div>
     </header>
     <!-- help section -->
-    <section id="help">
-        <h1 class="title subject">How to Play</h1>
-        <p class="instructions">The idea of the game is to follow the pattern created by the house crests.</p>
-        <p class="instructions">1. One of the house crests will light up</p>
-        <p class="instructions">2. Copy the game by clicking on the same house crest</p>
-        <p class="instructions">3. The game will duplicate the first signal and light up a second house crest</p>
-        <p class="instructions">4. Copy the game by clicking on both house crests in the order they were lit up</p>
-        <p class="instructions">5. The game will add another signal by lighting up a thrid housee crest</p>
-        <p class="instructions">It is you job to copy the games signals</p>
-        <p class="instructions">Good Luck!</p>
+    <section class="help">
+        <div class="container-fluid no-gutters info-container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h1 class="subject">How to Play</h1>
+
+                    <p class="instructions">The idea of the game is to follow the pattern created by the house crests.
+                    </p>
+                    <p class="instructions">1. One of the house crests will light up</p>
+                    <p class="instructions">2. Copy the game by clicking on the same house crest</p>
+                    <p class="instructions">3. The game will duplicate the first signal and light up a second house
+                        crest</p>
+                    <p class="instructions">4. Copy the game by clicking on both house crests in the order they were lit
+                        up</p>
+                    <p class="instructions">5. The game will add another signal by lighting up a thrid housee crest</p>
+                    <p class="instructions">It is you job to copy the games signals</p>
+                    <p class="instructions">Good Luck!</p>
+                </div>
+
+            </div>
+        </div>
     </section>
 
     <!-- SCRIPTS -->
-  <!--  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -66,7 +72,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-    <script src="assets/js/index.js"></script>-->
+    <script src="assets/js/index.js"></script>
 
 </body>
 
