--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
     <title>Harry Potter Game</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <!--  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">-->
    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <!-- <script src="assets/js/index.js"></script>-->
 </head>
 
 <body>
@@ -45,7 +41,7 @@
     <section id="home-page">
         <div class="container-fluid no-gutters school-crest-container">
             <div class="row">
-                <div id="welcome" class="col-12 text-center title">
+                <div id="welcome" class="col-12 text-center ">
                     <h1>Welcome to Hogwarts</h1>
                 </div>
             </div>
