--- a/game.html
+++ b/game.html
@@ -48,7 +48,7 @@
     <section id="game">
         <div class="container-fluid no-gutters house-crest-container">
 
-            <div class="row  title">
+            <div class="row  ">
                 <div class="col text-center">
                     <h1>Follow the House</h1>
                 </div>
