--- a/game.html
+++ b/game.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active mr-2">
-                            <a class="nav-link sr-only" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item mr-2">
                             <a class="nav-link" href="help.html">How To Play</a>
