Unit testing, code validation and Lighthouse testing

--- a/about.html
+++ b/about.html
@@ -13,13 +13,10 @@
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
     <link rel="stylesheet" href="assets/css//style.css" type="text/css">
-    <!--<link rel="stylesheet" href="assets/js/index.js" type="text/javascript">-->
-    <!--<script src="assets/js/index.js"></script>-->
 </head>
 
 <body>
-
-    <!-- Help and About pages -->
+    <!-- Navigation -->
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-sm navbar-dark">
@@ -62,7 +59,6 @@
         </p>
         <p class="source">(source: https://en.wikipedia.org/wiki/J._K._Rowling)</p>
     </section>
-
     <footer>
         <div class="container">
             <div class="row justify-content-center no-gutters">
@@ -93,7 +89,6 @@
             </div>
         </div>
     </footer>
-
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -105,7 +100,6 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
     <script src="assets/js/index.js"></script>
-
 </body>
 
 </html>
