--- a/game.html
+++ b/game.html
@@ -7,26 +7,22 @@
     <title>Harry Potter Game</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <!--<link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
-    <link rel="stylesheet" href="https: //cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
-    <link rel="stylesheet" href="assets/css//style.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <!--<script src="assets/js/index.js"></script>-->
 </head>
 
 <body>
-
-    <!-- Help and About pages -->
+    <!-- Navigation -->
     <header>
         <div class="containe-fluid">
             <nav class="navbar navbar-expand-sm navbar-dark">
-                <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse"
+                    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav mr-auto">
@@ -47,7 +43,6 @@
     <!-- game section -->
     <section id="game">
         <div class="container-fluid no-gutters house-crest-container">
-
             <div class="row  ">
                 <div class="col text-center">
                     <h1>Follow the House</h1>
@@ -68,7 +63,6 @@
                                 class="game-btn inline-block slytherin" alt="Slytherin Crest">
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-6">
                             <input id="hufflepuff" type="image" src="assets/images/hufflepuff_crest.png"
@@ -85,17 +79,9 @@
     </section>
     <!-- SCRIPTS -->
     <script src="assets/js/game.js"></script>
-   <!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>-->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-
-
 </body>
-
-
-
 
 </html>
