--- a/help.html
+++ b/help.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-
-    <!-- Help and About pages -->
+    <!-- Navigation -->
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-sm navbar-dark">
@@ -61,7 +60,6 @@
             </div>
         </div>
     </section>
-
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -73,10 +71,6 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
     <script src="assets/js/index.js"></script>
-
 </body>
-
-
-
 
 </html>
