Made changes as per Lighthouse

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Siobhan Baines | Software Developer | Leeds, UK"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harry Potter Game</title>
 
@@ -11,7 +12,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
+    <link rel="preload" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
     <link rel="stylesheet" href="assets/css//style.css" type="text/css">
 </head>
 
@@ -69,19 +70,19 @@
                                     class="fab fa-github"></i></a>
                         </li>
                         <li class="social-media inline-block ml-3">
-                            <a href="https://www.linkedin.com/in/siobhan-baines-9b296a22/" target="_blank"><i
+                            <a href="https://www.linkedin.com/in/siobhan-baines-9b296a22/" target="_blank" rel="noopener"><i
                                     class="fab fa-linkedin"></i></a>
                         </li>
                         <li class="social-media inline-block ml-3">
-                            <a href="https://www.facebook.com/siobhan.baines/" target="_blank"><i
+                            <a href="https://www.facebook.com/siobhan.baines/" target="_blank" rel="noopener"><i
                                     class="fab fa-facebook"></i></a>
                         </li>
                         <li class="social-media inline-block ml-3">
-                            <a href="https://www.instagram.com/siobhan.baines/" target="_blank"><i
+                            <a href="https://www.instagram.com/siobhan.baines/" target="_blank" rel="noopener"><i
                                     class="fab fa-instagram"></i></a>
                         </li>
                         <li class="social-media inline-block ml-3">
-                            <a href="https://twitter.com/BainesSiobhan" target="_blank"><i
+                            <a href="https://twitter.com/BainesSiobhan" target="_blank" rel="noopener"><i
                                     class="fab fa-twitter"></i></a>
                         </li>
                     </ul>
@@ -93,13 +94,12 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    <!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>-->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
