--- a/game.html
+++ b/game.html
@@ -3,16 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Siobhan Baines | Software Developer | Leeds, UK"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harry Potter Game</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">-->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <link rel="preload" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    
 </head>
 
 <body>
