--- a/help.html
+++ b/help.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Siobhan Baines | Software Developer | Leeds, UK"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harry Potter Game</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
+    <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">-->
+    <link rel="preload" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 
@@ -52,8 +53,8 @@
                         crest</p>
                     <p class="instructions">4. Copy the game by clicking on both house crests in the order they were lit
                         up</p>
-                    <p class="instructions">5. The game will add another signal by lighting up a thrid housee crest</p>
-                    <p class="instructions">It is you job to copy the games signals</p>
+                    <p class="instructions">5. The game will add another signal by lighting up a third house crest</p>
+                    <p class="instructions">It is your job to copy the games signals</p>
                     <p class="instructions">Good Luck!</p>
                 </div>
 
@@ -64,13 +65,12 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    <!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>-->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
