--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Siobhan Baines | Software Developer | Leeds, UK"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harry Potter Game</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
+    <link rel="preload" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 
@@ -57,9 +56,6 @@
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
