--- a/help.html
+++ b/help.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">-->
-    <link rel="preload" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
+    <link rel="preload" href="assets/css/fonts/ParryHotter.ttf" as="font" type="text/font">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 
