--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                                     class="fab fa-github"></i></a>
                         </li>
                         <li class="social-media inline-block ml-3">
-                            <a href="https://www.linkedin.com/in/siobhan-baines-9b296a22/" target="_blank" rel="noopener"><i
+                            <a href="https://www.linkedin.com/in/siobhan-baines/" target="_blank" rel="noopener"><i
                                     class="fab fa-linkedin"></i></a>
                         </li>
                         <li class="social-media inline-block ml-3">
