Font awesome issue in prod

--- a/help.html
+++ b/help.html
@@ -8,7 +8,7 @@
     <title>Harry Potter Game</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="preload" href="assets/css/fonts/ParryHotter.ttf" as="font" type="text/font">
+    <!-- <link rel="preload" href="assets/css/fonts/ParryHotter.ttf" as="font" type="text/font"> -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 
