--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <link rel="preload" as="font" href="assets/css/fonts/ParryHotter.ttf"  type="text/font">
+    <!-- <link rel="preload" as="font" href="assets/css/fonts/ParryHotter.ttf"  type="text/font"> -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     
 </head>
